<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffb266"
    tools:context="com.example.chris.omgandroid.Make_a_contact"
    android:gravity="center_horizontal">
    <!--android:id="@+id" -->


    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Make a Populisto Contact"
        android:id="@+id/checkBox2"
        android:textSize="20sp"
        android:paddingBottom="20dp"
        android:paddingTop="20dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:id="@+id/textView5"
        android:background="#ffffff"
        android:textSize="20sp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:id="@+id/textView6"
        android:background="#ffffff"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:id="@+id/textView8"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:background="#ffffff"
        android:layout_marginLeft="10dp"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:id="@+id/textView7"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:background="#ffffff"
        android:layout_marginLeft="10dp"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/comment"
        android:id="@+id/textView9"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:background="#ffffff"
        android:layout_marginLeft="10dp"
        android:textSize="20sp" />

</LinearLayout>
